kubernetes/monitoring/ntfy/ntfy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: monitoring
  labels:
    app: ntfy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        task: monitoring
        app: ntfy
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c
      priorityClassName: monitoring-priority
      containers:
      - name: ntfy
        resources:
          requests:
            cpu: 50m
            memory: 56Mi
          limits:
            cpu: 200m
            memory: 256Mi
        image: binwiederhier/ntfy:v2.14
        ports:
        - containerPort: 80
        command: ["ntfy"]
        args: ["serve", "--listen-http=:80", "--cache-file=/var/lib/ntfy/cache.db"]
        volumeMounts:
        - name: ntfy-data
          mountPath: /var/lib/ntfy

      volumes:
      - name: ntfy-data
        persistentVolumeClaim:
          claimName: ntfy-data-claim

---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: ntfy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: ntfy-bas-tls
  rules:
  - host: ntfy.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              number: 80
